<resources>
    <string name="app_name">旅行伴侣</string>
    <string name="app_intro">伴你快乐旅行</string>

    <string name="exit_tip">再按一次退出</string>

    <string name="wait_text">请稍后...</string>

    <string name="waiting_tip">数据加载中...</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新...</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_nodate">已加载全部</string>

    <string name="login_title">登录</string>
    <string name="register_title">注册</string>
    <string name="username_text">账户：</string>
    <string name="username_text_hint">请输入账户</string>
    <string name="password_text">密码：</string>
    <string name="password_text_hint">请输入密码</string>
    <string name="nickname_text">昵称：</string>
    <string name="nickname_text_hint">请输入昵称</string>
    <string name="login_btn_text">登录</string>
    <string name="register_btn_text">注册</string>
    <string name="register_success_text">注册成功，现在你可以登录啦</string>
    <string name="register_failed_text">注册失败</string>
    <string name="login_failed_text">登录失败</string>
    <string name="logout_btn_text">注销登录</string>
    <string name="re_account_exist">账户已存在</string>

    <string name="surround_text">周边</string>
    <string name="plan_text">计划</string>
    <string name="circle_text">动态圈</string>
    <string name="mine_text">我</string>

    <string name="hotel_text">酒店</string>
    <string name="mall_text">购物</string>
    <string name="food_text">美食</string>
    <string name="view_text">景点</string>

    <string name="mine_item_update_password">修改密码</string>
    <string name="old_password_text">原密码：</string>
    <string name="old_password_text_hint">请输入原密码</string>
    <string name="new_password_text">新密码：</string>
    <string name="new_password_text_hint">请输入新密码</string>
    <string name="submit_btn_text">提交</string>
    <string name="reset_password_success_tip">密码修改成功，请重新登录</string>
    <string name="reset_password_failed_tip">原密码错误</string>

    <string name="temperature_text">%s ℃</string>

    <string name="no_permissions_for_location">没有定位权限，请给予权限后重新启动\n（现在将使用默认位置）</string>

    <string name="detail_title">详情</string>

    <string name="add_plan_title">添加</string>
    <string name="note_text">随记</string>
    <string name="content_hint">请输入内容</string>
    <string name="add_plan_success_tip">添加成功</string>

    <string name="post_circle_title">发布</string>
    <string name="post_circle_success_tip">发布成功</string>
</resources>
