<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <com.love_cookies.cookie_library.Widget.NoScrollViewPager
        android:id="@+id/content_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/BLACK_A20" />

    <RadioGroup
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/surround_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/surround_text"
            android:textColor="@drawable/main_menu_bg"
            android:textSize="12sp"
            android:drawableTop="@drawable/main_menu_surround_bg"/>

        <RadioButton
            android:id="@+id/plan_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/plan_text"
            android:textColor="@drawable/main_menu_bg"
            android:textSize="12sp"
            android:drawableTop="@drawable/main_menu_plan_bg"/>

        <RadioButton
            android:id="@+id/circle_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/circle_text"
            android:textColor="@drawable/main_menu_bg"
            android:textSize="12sp"
            android:drawableTop="@drawable/main_menu_circle_bg"/>

        <RadioButton
            android:id="@+id/mine_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:button="@null"
            android:text="@string/mine_text"
            android:textColor="@drawable/main_menu_bg"
            android:textSize="12sp"
            android:drawableTop="@drawable/main_menu_mine_bg"/>

    </RadioGroup>

</LinearLayout>
