<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include layout="@layout/view_title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/type_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/plan_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/item_selectbox_bg"
                    android:padding="10dp"
                    android:text="@string/plan_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/note_rb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/item_selectbox_bg"
                    android:padding="10dp"
                    android:text="@string/note_text"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/content_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/square_dd_et_bg"
                android:gravity="left|top"
                android:hint="@string/content_hint"
                android:minLines="10"
                android:padding="8dp"
                android:textColorHint="#BFBFBF"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
